[package]
name = "rpick"
version = "0.9.1"
authors = ["Randy Barlow <randy@electronsweatshop.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/bowlofeggs/rpick"
documentation = "https://docs.rs/rpick"
description = """\
              Helps you pick items from a list by various algorithms. Example uses: pick a
              restaurant you haven't been to in a while, or an album to listen to."""
keywords = ["random", "game"]
categories = ["command-line-utilities", "games"]
edition = "2021"
rust-version = "1.74"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
dirs-next = "2"
prettytable-rs = "0.10"
rand = "0.8"
rand_distr = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
statrs = "0.16"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
assert_cmd = "2"
mockall = "0.13"
rand = {version = "0.8", features = ["small_rng"]}
regex = "1"
tempfile = "3"

[profile.release]
lto = true
